# Ascend_object_classification

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  inference_test  object_classification_preprocess  object_classification_preprocess.cpp  test  test.cpp
install/: local_setup.sh  setup.sh
log/: latest_build
src/: inference_test.cpp  object_classification_preprocess.h
src/object_classification_tensorrt/: CMakeLists.txt  package.xml
src/object_classification_tensorrt/src/: object_classification_tensorrt.cpp
src/utilities/: utilities_nvidia.h
utilities/: utilities_nvidia.cpp
